# Projct_ESP_IDF

./: README.md
tcp/: CMakeLists.txt  pytest_mqtt_tcp.py  sdkconfig
tcp/main/: CMakeLists.txt  ahtxx.c  ahtxx.h  app_main.c
tcp/simple_connect/: CMakeLists.txt
tcp/simple_connect/main/: idf_component.yml  simple_connect.c
